--- a/package.json
+++ b/package.json
@@ -2,20 +2,26 @@
   "name": "signup",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://divyagupta8126.github.io/SignUp-Page",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh": "^2.8.9",
+    "pages": "^0.0.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-icons": "^4.4.0",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages-d build",
+    "predeploy":"npm run build"
   },
   "eslintConfig": {
     "extends": [
